--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "koc-common-image",
   "main": "index.js",
   "dependencies": {
+    "gm": "^1.23.0",
+    "koc-common-return": "^1.0.2"
   },
   "repository": {
     "type": "git",
